--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@eva-design/eva": "^2.2.0",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-community/slider": "4.5.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -23,35 +23,36 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-media-library": "~16.0.5",
-    "expo-print": "~13.0.1",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.27",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.0",
+    "expo-file-system": "~18.0.2",
+    "expo-image-picker": "~16.0.1",
+    "expo-media-library": "~17.0.2",
+    "expo-print": "~14.0.2",
+    "expo-sharing": "~13.0.0",
+    "expo-splash-screen": "~0.29.7",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.5",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modalize": "^2.1.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-share": "^11.0.4",
-    "react-native-svg": "15.2.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-view-shot": "^4.0.0",
+    "react-native-view-shot": "~4.0.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
